--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-		"name": "curler",
-		"author": "Ryan French <frenchrya@gmail.com>",
-		"version": "0.0.2",
-		"description": "A native c++ node.js module for asynchronous http requests via libcurl.",
-		"homepage": "http://github.com/rfrench/curler",
-		"keywords": [
-			"curl", 
-			"libcurl",
-			"http"
-		],
-		"repository": {
-				"type": "git",
-				"url": "git://github.com/rfrench/curler.git"
-		},
-		"main": "curler.node",
-		"engines" : ["node >= 0.4.7"],
-		"scripts": {
-			"install" : "node-waf configure build install",
-			"preuninstall": "rm -rf build/*"
-  	}
+  "name": "curler",
+  "author": "Ryan French <frenchrya@gmail.com>",
+  "version": "0.0.3",
+  "description": "A native c++ node.js module for asynchronous http requests via libcurl.",
+  "homepage": "http://github.com/rfrench/curler",
+  "keywords": [
+    "curl", 
+    "libcurl",
+    "http"
+  ],
+  "repository": {
+      "type": "git",
+      "url": "git://github.com/rfrench/curler.git"
+  },
+  "main": "curler.node",
+  "engines" : ["node >= 0.4.7"],
+  "scripts": {
+    "install" : "node-gyp configure build install",
+    "preuninstall": "rm -rf build/*"
+  }
 }
