--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "curler",
   "author": "Ryan French <frenchrya@gmail.com>",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "A native c++ node.js module for asynchronous http requests via libcurl.",
   "homepage": "http://github.com/rfrench/curler",
   "keywords": [
@@ -13,7 +13,7 @@
       "type": "git",
       "url": "git://github.com/rfrench/curler.git"
   },
-  "main": "curler.node",
+  "main": "./build/Release/curler",
   "engines" : ["node >= 0.4.7"],
   "scripts": {
     "install" : "node-gyp configure build install",
